Fix large gap between rows of chart-list (#642)
Remove `flex: 1` so it no longer fills all available space.

--- a/frontend/src/app/charts/charts.component.scss
+++ b/frontend/src/app/charts/charts.component.scss
@@ -42,8 +42,6 @@ $filters-width: 175px;
       border-left: 1px solid $border-color;
 
       app-chart-list {
-        flex: 1;
-        display: flex;
         padding: 1.5em 0 0 1.5em;
       }
 
